maud/tests/warnings/keyword-without-at.stderr
error: found keyword `if`
 --> tests/warnings/keyword-without-at.rs:5:9
  |
5 |         if {}
  |         ^^
  |
  = help: should this be a `@if`?
