maud/tests/warnings/keyword-without-at.rs
use maud::html;

fn main() {
    html! {
        if {}
    };
}
